<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fragment_bg"
    tools:context=".ui.DetailMealFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/detailToolbar"
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mealIv"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            android:layout_marginTop="@dimen/default_margin"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailToolbar" />

        <TextView
            android:id="@+id/mealTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/app_name"
            style="@style/text_color"
            android:textSize="@dimen/medium_text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealIv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statisticCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/bgDetailMeal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealTitleTv">

            <TextView
                android:id="@+id/carbTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/carbs"
                style="@style/darkColorInBmi"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carbGramTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/carb_gram"
                style="@style/darkColorInBmi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/carbProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:progress="10"
                app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                app:layout_constraintStart_toStartOf="@+id/carbTv"
                app:layout_constraintTop_toBottomOf="@+id/carbTv" />

            <TextView
                android:id="@+id/proteinTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/protein"
                style="@style/darkColorInBmi"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/carbTv"
                app:layout_constraintTop_toBottomOf="@id/carbProgressBar" />

            <TextView
                android:id="@+id/proteinGramTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein_gram"
                style="@style/darkColorInBmi"
                app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                app:layout_constraintTop_toTopOf="@+id/proteinTv" />

            <ProgressBar
                android:id="@+id/proteinProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:progress="10"
                app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                app:layout_constraintStart_toStartOf="@+id/proteinTv"
                app:layout_constraintTop_toBottomOf="@+id/proteinTv" />

            <TextView
                android:id="@+id/text_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/fat"
                style="@style/darkColorInBmi"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/carbTv"
                app:layout_constraintTop_toBottomOf="@id/proteinProgressBar" />

            <TextView
                android:id="@+id/fatGramTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_gram"
                style="@style/darkColorInBmi"
                app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                app:layout_constraintTop_toTopOf="@+id/text_fat" />

            <ProgressBar
                android:id="@+id/fatProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:progress="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                app:layout_constraintStart_toStartOf="@+id/proteinTv"
                app:layout_constraintTop_toBottomOf="@+id/text_fat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/bgDetailMeal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statisticCardView">

            <TextView
                android:id="@+id/ingredientsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/ingredients"
                style="@style/darkColorInBmi"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/servingsNumberTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/servings_number"
                style="@style/darkColorInBmi" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/recipeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:lineHeight="22dp"
                android:text="@string/app_name"
                style="@style/darkColorInBmi" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/preparationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/preparation"
                style="@style/darkColorInBmi"
                android:textStyle="bold" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/preparationStepTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:lineHeight="22dp"
                android:text="@string/app_name"
                style="@style/darkColorInBmi" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>