<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_margin"
    tools:context=".ui.BMIFragment">

    <include
        android:id="@+id/bmiToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    ArcProgress-->
    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/Arc_Progress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/very_small_margin"
        app:arc_bottom_text="BMI"
        app:arc_bottom_text_size="28sp"
        app:arc_finished_color="@color/color_red"
        app:arc_progress="0"
        app:arc_stroke_width="20dp"
        app:arc_text_color="@color/black"
        app:arc_unfinished_color="@color/yellow_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/progressGuide"
        app:layout_constraintTop_toBottomOf="@id/bmiToolbar" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <!--TextView Overweight-->
    <TextView
        android:id="@+id/overweightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="60dp"
        android:text="@string/overweight_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Arc_Progress" />
    <!--ImageView circle Red-->
    <ImageView
        android:id="@+id/circleRedIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/very_small_margin"
        android:src="@drawable/circle_red"
        app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
        app:layout_constraintEnd_toStartOf="@+id/overweightTV"
        app:layout_constraintTop_toTopOf="@+id/overweightTV" />
    <!--TextView Normal-->
    <TextView
        android:id="@+id/normalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/normal_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/overweightTV"
        app:layout_constraintEnd_toStartOf="@+id/circleRedIV"
        app:layout_constraintTop_toTopOf="@+id/overweightTV" />
    <!--ImageView circle blue-->
    <ImageView
        android:id="@+id/circleBlueIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/very_small_margin"
        android:src="@drawable/circle_blue"
        app:layout_constraintBottom_toBottomOf="@+id/normalTV"
        app:layout_constraintEnd_toStartOf="@id/normalTV"
        app:layout_constraintTop_toTopOf="@+id/normalTV" />
    <!--TextView Underweight-->
    <TextView
        android:id="@+id/underWeightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/underweight_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/circleBlueIV"
        app:layout_constraintTop_toTopOf="@+id/normalTV" />
    <!--ImageView circle yellow-->
    <ImageView
        android:id="@+id/circleYellow_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/very_small_margin"
        android:src="@drawable/circle_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/underWeightTV"
        app:layout_constraintEnd_toStartOf="@id/underWeightTV"
        app:layout_constraintTop_toTopOf="@+id/underWeightTV" />
    <!--    TextInputLayout weight-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/WeightTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/weight"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:boxBackgroundMode="outline"
        app:placeholderTextColor="@color/yellow_medium"
        app:counterOverflowTextColor="@color/yellow_medium"
        app:counterTextColor="@color/yello_heavy"
        app:boxStrokeColor="@color/yello_heavy"
        app:helperTextTextColor="@color/yello_heavy"
        app:helperTextTextAppearance="@color/yello_heavy"
        app:suffixTextColor="@color/yello_heavy"
        app:hintTextAppearance="@color/yello_heavy"
        app:hintTextColor="@color/yello_heavy"
        app:layout_constraintBottom_toTopOf="@+id/heightTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalTV">
        <!--    TextInputEditText weight-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/WeightTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--    TextInputLayout Height-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/height"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="clear_text"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@+id/calculateBT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WeightTIL"
        app:placeholderTextColor="@color/yellow_medium"
        app:counterOverflowTextColor="@color/yellow_medium"
        app:counterTextColor="@color/yello_heavy"
        app:boxStrokeColor="@color/yello_heavy"
        app:helperTextTextColor="@color/yello_heavy"
        app:helperTextTextAppearance="@color/yello_heavy"
        app:suffixTextColor="@color/yello_heavy"
        app:hintTextAppearance="@color/yello_heavy"
        app:hintTextColor="@color/yello_heavy"
        >
        <!--    TextInputEditText Height-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--TextInputLayout weight menu-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuWeightTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/default_margin"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="@+id/WeightTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WeightTIL"
        app:layout_constraintTop_toTopOf="@+id/WeightTIL"
        >
        <!--AutoCompleteTextView weight menu-->
        <AutoCompleteTextView
            android:id="@+id/weightInputView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/kg_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--TextInputLayout weight menu-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuHeightTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/heightTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightTIL"
        app:layout_constraintTop_toTopOf="@+id/heightTIL"
        app:boxBackgroundMode="outline">
        <!--AutoCompleteTextView height menu-->
        <AutoCompleteTextView
            android:id="@+id/heightInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/cm_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Button calculate-->
    <Button
        android:id="@+id/calculateBT"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/calculate_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightTIL" />

    <!--    LinearLayout part result-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:background="@drawable/background_for_bmi_result"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--TextView result-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />
        <!--TextView result-->
        <TextView
            android:id="@+id/displayResultTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_type_in_result"
            android:textColor="@color/color_red"
            android:textSize="@dimen/headline_small"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="165dp" />
        <!--TextView tips-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/tips_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />
        <!--TextView some tips-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/tips"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text_size"
            android:textStyle="normal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>